Added instructions popup

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,33 @@
 body {
     text-align: center;
     background-color: #1f1f1f;
+    font-family: 'Press Start 2P', cursive;
 }
 
-#level-title {
-    font-family: 'Press Start 2P', cursive;
+.instructions {
+    position:fixed;
+    width: 54vw;
+    height: 80vh;
+    background-color: #111111;
+    border: 4px solid #FB0F01;
+    text-align: center;
+    margin: 0 15%;
+    z-index: 1;
+    padding: 2rem 8rem;
+}
+
+h2, #level-title {
     font-size: 3rem;
     margin: 5%;
     color: #FCB836;
     text-shadow: 4px 4px #FB0F01;
+}
+
+p {
+    margin-top: 12rem;
+    color: #FCB836;
+    line-height: 3;
+    text-shadow: 2px 2px #FB0F01;
 }
 
 .container {
